# hodei-policies

./: .env.example  .gitignore  APP_EXAMPLE_COMPLETE.md  CEDAR_BEST_PRACTICES.md  Cargo.toml  DB_ADMIN_GUIDE.md  DEPLOYMENT_GUIDE.md  DEV_QUICK_START.md  Dockerfile  ENTITY_TYPE_ATTRIBUTES.md  FINAL_STATUS.md  FIXES_APPLIED.md  FRAMEWORK_COMPLETE.md  FRAMEWORK_EVOLUTION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE-MIT  Makefile  Makefile.publish  NEXT_STEPS.md  PHASE2_COMPLETE.md  POLICY_CRUD_API.md  PROJECT_SUMMARY.md  PUBLICATION_GUIDE.md  PUBLISHING_GUIDE.md  PUBLISH_INSTRUCTIONS.md  QUICK_START.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  REST_API_STANDARDS.md  REST_AUDIT.md  REST_NORMALIZATION_COMPLETE.md  SCRIPTS_GUIDE.md  START_DEV.sh  TESTING_STRATEGY.md  TESTING_SUMMARY.md  USAGE_EXAMPLE.md  WORKSPACE_VERSIONING.md  build.rs  (+6 more)
crates/app/: Cargo.toml  error.rs
crates/app-example/: Cargo.toml
crates/app-example/src/: domain.rs  lib.rs  main.rs  policies.rs  service.rs
crates/app/src/: auth.rs  lib.rs  main.rs  mapper.rs
crates/hodei-authz/: Cargo.toml  README.md
crates/hodei-authz-axum/: Cargo.toml  README.md
crates/hodei-authz-axum/src/: extractors.rs  lib.rs  middleware.rs
crates/hodei-authz-postgres/: Cargo.toml  README.md
crates/hodei-authz-postgres/migrations/: 001_create_policies.sql
crates/hodei-authz-postgres/src/: lib.rs
crates/hodei-authz-postgres/tests/: integration_tests.rs
crates/hodei-authz-redis/: Cargo.toml  README.md
crates/hodei-authz-redis/src/: lib.rs
crates/hodei-authz-redis/tests/: integration_tests.rs
crates/hodei-authz-sdk/: Cargo.toml  README.md
crates/hodei-authz-sdk/src/: builder.rs  lib.rs  schema.rs
crates/hodei-authz/src/: api.rs  lib.rs  traits.rs
crates/hodei-authz/src/internal/: domain.rs
crates/hodei-authz/tests/: traits_tests.rs
crates/hodei-derive/: Cargo.toml  README.md
crates/hodei-derive/src/: lib.rs
crates/hodei-hrn/: Cargo.toml  README.md
crates/hodei-hrn/tests/: hrn_tests.rs
crates/hodei_domain/: Cargo.toml
crates/hodei_domain/src/: api.rs  lib.rs
crates/hodei_domain/src/features/: mod.rs
crates/hodei_domain/src/features/artifact_management/: dto.rs
crates/hodei_domain/src/features/document_management/: dto.rs
crates/hodei_domain/src/internal/: domain.rs
crates/hodei_provider/: Cargo.toml
crates/hodei_provider/src/: api.rs  lib.rs
crates/hodei_provider/src/internal/: domain.rs
crates/hodei_provider_derive/: Cargo.toml
crates/hodei_provider_derive/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: api.rs  lib.rs
examples/: README.md  basic_usage.rs
hodei_domain/: Cargo.toml
hodei_domain/src/: lib.rs
hodei_provider/: Cargo.toml
hodei_provider/src/: lib.rs
hodei_provider_derive/: Cargo.toml
hodei_provider_derive/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
migrations/: 20251015000000_initial_schema.sql
scripts/: .gitignore  README.md  clean.sh  dev-setup.sh  prepare_publish.sh  publish.sh  publish_all.sh  publish_final.sh  publish_one_by_one.sh  publish_remaining.sh  publish_sequential.sh  restore_workspace.sh
src/: auth.rs  main.rs  mapper.rs
tests/: README.md  api_tests.sh  app_example_tests.sh  artifact_tests.sh  common.rs  handlers.rs
