[workspace]
members = [
    "crates/kernel",
    "crates/hodei_provider",
    "crates/hodei_provider_derive",
    "crates/hodei_domain",
    "crates/app",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
thiserror = "2.0.17"
cedar-policy = "4.7.0"
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
futures-util = "0.3.31"
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json"] }
sqlx-cli = "0.7.4"
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.101"
inventory = "0.3.21"
hodei-kernel = { path = "crates/kernel" }
hodei-provider-derive = { path = "crates/hodei_provider_derive" }
hodei-provider = { path = "crates/hodei_provider" }
hodei-domain = { path = "crates/hodei_domain" }