[package]
name = "hodei_domain"
version = "0.1.0"
edition = "2024"

[dependencies]
hodei_provider = { path = "../hodei_provider" }
kernel = { path = "../kernel" }
cedar-policy = "4.7.0"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "macros"] }

[features]
schema-discovery = []
