[package]
name = "hodei-provider"
version = "0.1.0"
edition = "2024"
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
description = "Provider traits and inventory system for Hodei authorization with Cedar Policy"
license = "MIT"
repository = "https://github.com/Rubentxu/hodei-policies"
homepage = "https://github.com/Rubentxu/hodei-policies"
documentation = "https://docs.rs/hodei-provider"
keywords = ["authorization", "cedar", "policy", "provider"]
categories = ["authentication", "web-programming"]
readme = "../README.md"

[dependencies]
hodei-provider-derive = { path = "../hodei_provider_derive", version = "0.1.0" }
cedar-policy = "4.7.0"
inventory = "0.3.15"
hodei-kernel = { path = "../kernel", version = "0.1.0" }
