[package]
name = "hodei-kernel"
version = "0.1.0"
edition = "2024"
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
description = "Core types and traits for Hodei authorization system with Cedar Policy"
license = "MIT"
repository = "https://github.com/Rubentxu/hodei-policies"
homepage = "https://github.com/Rubentxu/hodei-policies"
documentation = "https://docs.rs/hodei-kernel"
keywords = ["authorization", "cedar", "policy", "security", "multi-tenant"]
categories = ["authentication", "web-programming"]
readme = "../README.md"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "2.0.12"
sqlx = { version = "0.8.6", optional = true, features = ["postgres"] }
