[package]
name = "hodei-policies"
version = "0.1.0"
edition = "2024"
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
description = "Multi-tenant authorization engine with Cedar Policy - Demo application (use hodei-kernel, hodei-provider, hodei-domain for libraries)"
license = "MIT"
repository = "https://github.com/Rubentxu/hodei-policies"
homepage = "https://github.com/Rubentxu/hodei-policies"
keywords = ["authorization", "cedar", "policy", "multi-tenant", "security"]
categories = ["authentication", "web-programming"]
readme = "README.md"
build = "build.rs"
publish = false

[dependencies]
hodei-kernel = { path = "../kernel", workspace = true, features = ["sqlx"] }
hodei-provider = { workspace = true }
hodei-domain = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
cedar-policy = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
sqlx-cli = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
hodei-provider = { workspace = true }
hodei-domain = { workspace = true, features = ["schema-discovery"] }

[features]
schema-discovery = []

[package.metadata.sqlx]
offline = true
