[package]
name = "hodei-authz"
version = "0.1.0"
edition = "2024"
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
description = "Core traits and types for Hodei authorization system with Cedar Policy"
license = "MIT"
repository = "https://github.com/Rubentxu/hodei-policies"
homepage = "https://github.com/Rubentxu/hodei-policies"
documentation = "https://docs.rs/hodei-authz"
keywords = ["authorization", "cedar", "iam", "policy"]
categories = ["authentication", "web-programming"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
cedar-policy = { workspace = true }
hodei-hrn = { workspace = true }
hodei-derive = { workspace = true }
inventory = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }