[package]
name = "hodei-authz"
version = "0.1.0"
edition = "2024"
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
description = "Core authorization traits and types for Hodei framework with Cedar Policy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rubentxu/hodei-policies"
documentation = "https://docs.rs/hodei-authz"
homepage = "https://github.com/Rubentxu/hodei-policies"
keywords = ["authorization", "cedar", "policy", "iam"]
categories = ["authentication", "web-programming"]
readme = "README.md"

[dependencies]
hodei-hrn = "0.1.0"
hodei-derive = "0.1.0"
cedar-policy = { workspace = true }
inventory = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }