[package]
name = "hodei-derive"
version = "0.1.0"
edition = "2024"
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
description = "Derive macros for Hodei authorization framework - auto-generate Cedar schemas"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rubentxu/hodei-policies"
homepage = "https://github.com/Rubentxu/hodei-policies"
documentation = "https://docs.rs/hodei-derive"
keywords = ["derive", "macro", "authorization", "cedar"]
categories = ["development-tools::procedural-macro-helpers", "authentication"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }