[package]
name = "hodei-hrn"
version = "0.1.0"
edition = "2024"
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
description = "Hodei Resource Names (HRN) - Unique resource identification system for authorization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rubentxu/hodei-policies"
documentation = "https://docs.rs/hodei-hrn"
homepage = "https://github.com/Rubentxu/hodei-policies"
keywords = ["hrn", "resource", "identifier", "authorization"]
categories = ["data-structures", "authentication"]
readme = "README.md"
exclude = ["tests/fixtures/*"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.0"

[features]
sqlx = ["dep:sqlx"]
