[package]
name = "hodei-domain"
version = "0.1.0"
edition = "2024"
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
description = "Domain entities and commands for Hodei authorization with Cedar Policy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rubentxu/hodei-policies"
homepage = "https://github.com/Rubentxu/hodei-policies"
documentation = "https://docs.rs/hodei-domain"
keywords = ["authorization", "cedar", "domain", "entities"]
categories = ["authentication", "web-programming"]
readme = "../README.md"

[dependencies]
hodei-hrn = { workspace = true }
hodei-authz = { workspace = true }
hodei-derive = { workspace = true }
cedar-policy = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "macros"] }

[features]
schema-discovery = []
