[package]
name = "hodei-kernel"
version = "0.1.0"
edition = "2024"
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
description = "Core types and utilities for Hodei authorization system"
license = "MIT"
repository = "https://github.com/Rubentxu/hodei-policies"
homepage = "https://github.com/Rubentxu/hodei-policies"
documentation = "https://docs.rs/hodei-kernel"
keywords = ["authorization", "cedar", "kernel", "hrn"]
categories = ["authentication", "web-programming"]
readme = "../README.md"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
sqlx = ["dep:sqlx"]
